Switched from `List.of` to `Arrays.asList()` in `Message` to support null arguments in the array
(cherry picked from commit 466edc7283e32ca39d6458b88f6af95da4650629)